--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "repository": "https://github.com/expresswayjs/expressway.git",
     "author": "ExpresswayJs <expresswayjs@camelcase.co>",
     "license": "MIT",
+    "scripts": {
+        "test": "jest --config jest.config.js"
+    },
     "dependencies": {
         "colors": "^1.4.0",
+        "crypto-js": "^4.0.0",
         "csurf": "^1.11.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
@@ -17,5 +21,8 @@
         "nodemailer": "^6.4.10",
         "pug": "^3.0.0",
         "stack-trace": "^0.0.10"
+    },
+    "devDependencies": {
+        "jest": "^26.1.0"
     }
 }
