added travis automerge

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
 node_js:
     - '12.16.3'
+cache: yarn
 script:
     - echo 'Build starts!!'
     - echo 'Installing Deps!'
     - yarn
     - echo 'Testing!'
     - yarn test
+after_success:
+    - ./travis-merge.sh
