--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-    "name": "expressway",
+    "name": "@expresswayjs/expressway",
     "version": "0.1.0",
     "description": "A simple nodejs framework for web partisans",
     "main": "index.js",
     "repository": "https://github.com/expresswayjs/expressway.git",
     "author": "ExpresswayJs <expresswayjs@camelcase.co>",
+    "keywords": [
+        "expressway",
+        "node",
+        "mvc",
+        "express",
+        "framwork"
+    ],
     "license": "MIT",
     "scripts": {
-        "test": "jest --config jest.config.js"
+        "test": "jest --config jest.config.js",
+        "publish": "npm publish --access=public"
     },
     "dependencies": {
         "colors": "^1.4.0",
