--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "license": "MIT",
     "scripts": {
         "test": "jest --config jest.config.js",
-        "publish": "npm publish --access=public"
+        "publish": "npm publish --access public"
     },
     "dependencies": {
         "colors": "^1.4.0",
