--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@expresswayjs/expressway",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "description": "A simple nodejs framework for web partisans",
     "main": "index.js",
     "repository": "https://github.com/expresswayjs/expressway.git",
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "colors": "^1.4.0",
+        "cookie-parser": "^1.4.5",
         "crypto-js": "^4.0.0",
         "csurf": "^1.11.0",
         "dotenv": "^8.2.0",
@@ -31,6 +32,7 @@
         "stack-trace": "^0.0.10"
     },
     "devDependencies": {
-        "jest": "^26.1.0"
+        "jest": "^26.1.0",
+        "morgan": "^1.10.0"
     }
 }
