--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@expresswayjs/expressway",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "A simple nodejs framework for web partisans",
     "main": "index.js",
     "repository": "https://github.com/expresswayjs/expressway.git",
@@ -27,12 +27,12 @@
         "lodash": "^4.17.19",
         "moment": "^2.27.0",
         "mongoose": "^5.9.25",
+        "morgan": "^1.10.0",
         "nodemailer": "^6.4.10",
         "pug": "^3.0.0",
         "stack-trace": "^0.0.10"
     },
     "devDependencies": {
-        "jest": "^26.1.0",
-        "morgan": "^1.10.0"
+        "jest": "^26.1.0"
     }
 }
